<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation ExtraTranslation">
    <string name="app_name">诗歌本</string>
    <string name="app_title_main">书拉密女-诗歌本</string>
    <string name="about">关于</string>
    <string name="add">加添</string>
    <string name="add_renew">添加/更新</string>
    <string name="overwrite">覆盖</string>
    <string name="add_to_db">已经添加并保存到数据库！</string>
    <string name="add_to_db_failed">媒体记录保存失败！</string>
    <string name="app_libraries">诗歌本程序使用以下第三方库： %1$s</string>
    <string name="buffering">正在缓冲&#8230;</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="copyright">Copyright@2020, Eng Chong Meng
        &lt;br/>&lt;a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0&lt;/a>
        &lt;br/>All rights reserved.</string>
    <string name="db_export">数库导出</string>
    <string name="db_import"><u>数库导入</u></string>
    <string name="db_import_file">数据库导入文件</string>
    <string name="db_import_proceed">开始将文件: \'%1$s\' 内容（%2$s），导入数据库媒体记录</string>
    <string name="db_import_record">数库导入共 %1$d (%2$d) 首诗歌</string>
    <string name="db_import_start">开始将文件内容导入数据库媒体记录…</string>
    <string name="db_import_NQ"><u>NQ&#x2B07;</u></string>
    <string name="db_file_missing">请提供媒体内容真实路径！</string>
    <string name="db_list">数库列项</string>
    <string name="db_no_overwrite">保留现有记录</string>
    <string name="db_overwrite">覆盖现有记录</string>
    <string name="db_overwrite_media">是否覆盖数据库中的现有媒体记录？</string>
    <string name="delete">删除</string>
    <string name="delete_history">删除诗歌历史记录: %1$s？</string>
    <string name="delete_media">删除诗歌媒体记录？&lt;br/>%1$s#%2$04d: %3$s</string>
    <string name="delete_media_failed">无法删除媒体记录: %1$s#%2$d。</string>
    <string name="delete_media_ok">成功删除媒体记录: %1$s#%2$d。</string>
    <string name="en2ch_hymn_same">中英文诗歌编号是一样的！</string>
    <string name="exit">退出</string>
    <string name="file_saved">文件保存成功完成！</string>
    <string name="help_online">网上帮助</string>
    <string name="hymn_no">诗歌编号</string>
    <string name="hymn_sn_convert">诗歌数字转换测试</string>
    <string name="hymn_type">诗歌类别</string>
    <string name="in_development">仍在开发中</string>
    <string name="lyrics_chinese_traditional"><u>简体&#x2B0C;繁体歌词</u></string>
    <string name="lyrics_chinese_english"><u>中文&#x2B0C;英文歌词</u></string>
    <string name="lyrics_english">在线英文歌词</string>
    <string name="lyrics_english_delete">英文歌词删除</string>
    <string name="lyrics_text_size_increase">歌词文字加大</string>
    <string name="lyrics_text_size_decrease">歌词文字减小</string>
    <string name="lyrics_text_size_limits">已达到文本最小或最大的限制值。</string>
    <string name="media_content_remove">从手机中删除媒体内容（如果有）</string>
    <string name="media_config">用户定义媒体设置</string>
    <string name="media_file_not_found">找不到要链接到的实际媒体内容！请将副本保存到所需位置。</string>
    <string name="media_link">媒体链接</string>
    <string name="media_content">媒体内容</string>
    <string name="media_type">媒体类型</string>
    <string name="ok">确认</string>
    <string name="back">返回</string>
    <string name="auto_stream">自动连播</string>
    <string name="auto_stream_start">是否启动 \"%1$s:%2$s\" 自动连播/在线下载？</string>
    <string name="auto_stream_unsupported">\“%1$s:%2$s\” 不支持自动连播。</string>
    <string name="nq_download">NQ－诗歌链接下载</string>
    <string name="nq_download_completed">%1$s－诗歌链接：%2$s (%3$s) 首下载完毕！</string>
    <string name="nq_download_failed">%1$s－诗歌链接下载失败！</string>
    <string name="nq_download_in_progress">%1$s－链接下载中…</string>
    <string name="nq_download_proceed">执行 %1$s 诗歌链接下载 (%2$s)？\n过程需要一些时间。进程将在后台进行，您可以继续使用应用程序。</string>
    <string name="nq_download_starting">%1$s－诗歌链接下载开始…</string>
    <string name="nq_record_delete">删除NQ－媒体链接记录:\n%1$s?</string>
    <string name="playback_completed">播放结束</string>
    <string name="playback_rate">视频播放速率：%1$sx</string>
    <string name="to_be_added">待加</string>
    <string name="unsaved_changes">您尚未保存更改。保存或取消并退出。</string>
    <string name="version">程式版本: %1$s-%2$d</string>
    <string name="show_history_log"><u>历史记录</u></string>
    <string name="wp_size">壁纸像素尺寸 [宽x高]：[%1$dx%2$d]</string>
    <string name="error">错误</string>
    <string name="error_hymn_config">输入错误: 未输入诗歌号码或媒体链接</string>
    <string name="error_invalid">输入错误: 未按目录或输入(附)号码</string>
    <string name="error_media_url_invalid">提供的媒体网址不正确: %1$s</string>
    <string name="error_playback">无法解码视频链接或进行播放: %1$s</string>
    <string name="error_search_empty">请输入内容进行搜索</string>
    <string name="error_file_not_found">（无法取得文件: %1$s）</string>
    <string name="error_english_lyrics_null">对不起！当诗歌 \'%1$d\' 首没有英文歌词</string>
    <string name="hymn_info_bb_max">补充本诗歌只有%1$d（%2$d）首</string>
    <string name="hymn_info_bb_range_over">补充本诗歌没有: %1$s~%2$s（%3$s）</string>
    <string name="hymn_info_db_max">大本诗歌只有%1$d（%2$d）首，和附歌6首</string>
    <string name="hymn_info_db_range_fu">大本诗歌附歌只有1~6首</string>
    <string name="hymn_info_er_max">儿童诗歌只有%1$d（%2$d）首</string>
    <string name="hymn_info_er_range_over">儿童诗歌没有: %1$s~%2$s（%3$s）</string>
    <string name="hymn_info_xb_max">新歌颂咏只有%1$d（%2$d）首</string>
    <string name="hymn_info_xb_invalid">新歌颂咏诗歌没有: %1$s</string>
    <string name="hymn_info_xg_max">新诗歌只有%1$d（%2$d）首</string>
    <string name="hymn_info_xg_invalid">新诗歌本没有: %1$s</string>
    <string name="hymn_info_yb_max">青年诗歌只有%1$d（%2$d）首</string>
    <string name="hymn_info_yb_invalid">青年诗歌没有: %1$s</string>
    <string name="hymn_info_media_none">对不起！此项目前没有播放文件</string>
    <string name="hymn_info_sp_none">您选择的项目，没有附歌</string>
    <string name="app_apk_invalid">下载文件无效或版本不正确</string>
    <string name="apk_install_failed">应用程序安装时发生错误：(%1$s) %2$s</string>
    <string name="apk_install_completed">应用程序安装成功！</string>
    <string name="app_install_ready">已下载应用程序包 (%1$s)，并准备进行安装。</string>
    <string name="app_version_invalid">下载的文件包含不匹配的版本代码：实际 = %1$s (%2$s)</string>
    <string name="app_new_available">在线新版本: %1$s-%2$s</string>
    <string name="app_reinstall">重新安装</string>
    <string name="app_update">升级</string>
    <string name="app_upgrade">点击更新程序</string>
    <string name="app_update_check">更新</string>
    <string name="app_update_install">应用程序更新</string>
    <string name="app_update_none">没有应用程序新版本</string>
    <string name="app_version_current">您当前安装版本;\n编号和代码：%1$s-%2$s 是最新的。\n在线可用版本：%3$s-%4$s。</string>
    <string name="app_version_new_available">可下载新%1$s;\n编号和代码：%2$s-%3$s。\n当前安装的版本：%4$s-%5$s。</string>
    <string name="app_uninstall">您的版本 v1.2.0 需要先卸载再更新。\n然后从下载目录手动安装:\n%1$s</string>
    <string name="download">下载</string>
    <string name="download_again">重新下载</string>
    <string name="download_completed">下载完毕</string>
    <string name="download_failed">无法下载新程序版本！请退出应用程序并重试。</string>
    <string name="download_in_progress">正在下载更新。</string>
    <string name="download_remaining_time">剩余时间: %1$s</string>
    <string name="download_speed">下载速度: %1$s/sec (%2$s)</string>
    <string name="download_timeout_timer">下载无响应超时倒数: %1$02d秒</string>
    <string name="download_wait">请稍候，文件下载已在进行中。</string>
    <string name="in_progress">进行中</string>
    <string name="file_access_no_permission">您没有足够的权限保存或打开文件。请检查您的读取权限，然后重试</string>
    <string name="file_does_not_exist">找不到指定的文件。已删除或移动了该文件</string>
    <string name="file_download_failed">下载文件时发生错误：%1$s</string>
    <string name="file_open_no_application">诗歌本找不到与此文件类型关联的应用程序</string>
    <string name="personal_password">个人密码</string>
    <string name="password">密码:</string>
    <string name="sign_in">登入</string>
    <string name="user_name">用户:</string>
    <string name="user_login">请登录</string>
    <string name="share_text">Share text&#8230;</string>
    <string name="share_file">Share file&#8230;</string>
    <string name="share_lyrics">分享歌词&#8230;</string>
    <string name="share_file_missing">提醒：您正在共享一个没有实际媒体内容的网址：%1$s！</string>
    <string name="hint_hymn_content_search">自动繁体&#x27A1;简体歌词搜索</string>
    <string name="hint_hymn_history">&#11014;最近选择诗歌编号</string>
    <string name="hint_hymn_lyrics_online">歌词文本为空。请在线查看\'教唱\'诗歌词文本。</string>
    <string name="hint_hymn_number_enter">输入诗歌编号&#11015;</string>
    <string name="hint_hymn_ui">按目录选项，或输入(附)编号\n后按大本、补充、新诗、新颂、儿诗或英文</string>
    <string name="send_logs">提報错误</string>
    <string name="send_logs_subject">诗歌本错误报告</string>
    <string name="send_logs_title">通过电子邮件报告诗歌本错误</string>
    <string name="semd_logs_info">您提供的以下信息可以帮助开发人员解决问题：
        \n\n1.在问题发生之前您做的最后一件事是什么？
        \n\n\n2.您看到的问题是什么，如果有的话，还包括显示屏的快照？
        \n\n\n3.您能否或如何重现问题？</string>
    <string name="hymn_bb">补充</string>
    <string name="hymn_db">大本</string>
    <string name="hymn_content">内容</string>
    <string name="hymn_english">英文</string>
    <string name="hymn_er">儿诗</string>
    <string name="hymn_fu">附歌</string>
    <string name="hymn_lyrics">歌词</string>
    <string name="hymn_score">歌谱</string>
    <string name="hymn_search"><u>内容搜索</u></string>
    <string name="hymn_xb">新颂</string>
    <string name="hymn_xg">新诗</string>
    <string name="hymn_yb"><u>青年</u></string>
    <string name="hymn_toc">目录</string>
    <string name="hymn_category">诗歌类别</string>
    <string name="hymn_stroke">笔画索引</string>
    <string name="hymn_pinyin">拼音索引</string>
    <string name="hymn_eng2ch">英中对照</string>
    <string name="hymn_title_bb">诗歌本－补充本</string>
    <string name="hymn_title_db">诗歌本－大本诗歌</string>
    <string name="hymn_title_er">诗歌本－儿童诗歌</string>
    <string name="hymn_title_xb">诗歌本－新歌颂咏</string>
    <string name="hymn_title_xg">诗歌本－新诗歌本</string>
    <string name="hymn_title_yb">诗歌本－青年诗歌</string>
    <string name="hymn_media_banzou">伴奏</string>
    <string name="hymn_media_changshi">唱诗</string>
    <string name="hymn_media_jiaochang"><u>教唱</u></string>
    <string name="hymn_media_media"><u>媒体</u></string>
    <string name="hymn_title_mc_bb">补充 %1$d: %2$s</string>
    <string name="hymn_title_mc_db">大本 %1$d: %2$s</string>
    <string name="hymn_title_mc_dbs">大本 附%1$d: %2$s</string>
    <string name="hymn_title_mc_er">儿诗 %1$d: %2$s</string>
    <string name="hymn_title_mc_xb">新颂 %1$d: %2$s</string>
    <string name="hymn_title_mc_xg">新诗 %1$d: %2$s</string>
    <string name="menu_media_ui_default_show">默认显示播放条</string>
    <string name="menu_media_ui_default_hide">默认隐藏播放条</string>
    <string name="menu_media_ui_toggle">显示/隐藏播放条</string>
    <string name="nn0">0</string>
    <string name="nn1">1</string>
    <string name="nn2">2</string>
    <string name="nn3">3</string>
    <string name="nn4">4</string>
    <string name="nn5">5</string>
    <string name="nn6">6</string>
    <string name="nn7">7</string>
    <string name="nn8">8</string>
    <string name="nn9">9</string>
    <string name="nn10">附</string>
    <string name="nn11">Del</string>
    <string name="help">帮助</string>
    <string name="home">主页</string>
    <string name="small">小</string>
    <string name="lager">大</string>
    <string name="xlager">超大</string>
    <string name="inc">加大</string>
    <string name="dec">减小</string>
    <string name="red">红色</string>
    <string name="blue">蓝色</string>
    <string name="grey">灰色</string>
    <string name="black">黑色</string>
    <string name="white">白色</string>
    <string name="yellow">黄色</string>
    <string name="green">绿色</string>
    <string name="sbg1">浅橙色</string>
    <string name="sbg2">浅蓝色</string>
    <string name="sbg3">绿色</string>
    <string name="sbg4">水珠蓝色</string>
    <string name="sbg5">浅啡色</string>
    <string name="sbg6">乳白色</string>
    <string name="sbg7">花信子</string>
    <string name="sbg8">砖块</string>
    <string name="sbg9">一朵菊花</string>
    <string name="sbg10">绿叶水珠</string>
    <string name="sbg11">绿色幽幽</string>
    <string name="sbg12">薰衣草</string>
    <string name="score_color_change">诗谱颜色切换</string>
    <string name="STD">字词转换标准表</string>
    <string name="S2HK">简体到香港繁体</string>
    <string name="S2T">简体到繁体</string>
    <string name="S2TW">简体到台湾正体</string>
    <string name="S2TWP">简体到台湾正体，并转换为台湾常用词汇</string>
</resources>