<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/alwayshow"
        android:title="@string/menu_media_ui_default_show" />

    <item
        android:id="@+id/alwayhide"
        android:title="@string/menu_media_ui_default_hide" />

    <item
        android:id="@+id/menutoggle"
        android:title="@string/menu_media_ui_toggle" />

    <item
        android:id="@+id/scoreColorChange"
        android:title="@string/score_color_change" />

    <item
        android:id="@+id/lyrcsTextSizeInc"
        android:title="@string/lyrics_text_size_increase" />

    <item
        android:id="@+id/lyrcsTextSizeDec"
        android:title="@string/lyrics_text_size_decrease" />

    <item
        android:id="@+id/lyrcsEnglish"
        android:title="@string/lyrics_english" />

    <item
        android:id="@+id/lyrcsEnglishDelete"
        android:title="@string/lyrics_english_delete" />

    <item
        android:id="@+id/lyrcsShare"
        android:title="@string/share_lyrics" />

    <item
        android:id="@+id/help"
        android:title="@string/help" />

    <item
        android:id="@+id/home"
        android:title="@string/home" />
</menu>