<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alpha="20.0"
    android:padding="5dp"
    android:background="@drawable/bg0"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hint_hymn_ui"
        android:maxLines="2"
        android:textColor="@color/red800"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_entry"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.9"
        android:gravity="center"
        android:hint="@string/hint_hymn_number_enter"
        android:maxLength="4"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tv_search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.9"
        android:textSize="25sp"
        android:hint="@string/hint_hymn_content_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.87"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:shadowColor="@color/black"
            android:text="@string/hymn_search"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_toc"
            style="@style/SpinnerView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.45"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn7"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn8"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn9"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bs_er"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/hymn_er"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn4"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn5"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn6"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bs_xb"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/hymn_new"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn1"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn2"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn3"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bs_bb"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/hymn_bb"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/n10"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn10"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn0"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/n11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/nn11"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bs_db"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/hymn_db"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>