<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hymnsGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_dark"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/btn_hymnSearch"
        style="@style/ButtonTop"
        android:layout_weight="0.7"
        android:src="@drawable/ic_search" />

    <RadioButton
        android:id="@+id/btn_media"
        style="@style/ButtonRadio"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_media" />

    <RadioButton
        android:id="@+id/btn_banzhou"
        style="@style/ButtonRadio"
        android:checked="true"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_banzou" />

    <RadioButton
        android:id="@+id/btn_jiaochang"
        style="@style/ButtonRadio"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_jiaochang" />

    <RadioButton
        android:id="@+id/btn_changshi"
        style="@style/ButtonRadio"
        android:layout_marginStart="1dp"
        android:text="@string/hymn_media_changshi" />
</RadioGroup>
